--- a/Portfolio.html
+++ b/Portfolio.html
@@ -6,43 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
 
 
     <link rel="stylesheet" href="./Portfolio.css">
     <script src="./Portfolio.js"></script>
 </head>
 <body>
-    <div class="swiper-container">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide main">
-            <div class="diary"></div>
-          </div>
-          <div class="swiper-slide personal-data">
-              2번 슬라이드입니다.<br>
-              레이아웃만 제대로 설정되어 있다면 슬라이드에 어떤 것이든 넣을 수 있습니다.
-          </div>
-          <div class="swiper-slide other-data">
-              <img src="https://image.flaticon.com/icons/png/128/1933/1933588.png" alt=""><br>
-              이렇게 이미지도 넣을 수 있습니다.
-          </div>
-          <div class="swiper-slide web-project">
-              1번 슬라이드입니다.<br>마우스로 움직여보세요.
-          </div>
-          <div class="swiper-slide art-work">
-              1번 슬라이드입니다.<br>마우스로 움직여보세요.
-          </div>
-          <div class="swiper-slide etc">
-              1번 슬라이드입니다.<br>마우스로 움직여보세요.
-          </div>
-          <div class="swiper-slide contact">
-              1번 슬라이드입니다.<br>마우스로 움직여보세요.
-          </div>
-          <div class="swiper-slide end">
-              1번 슬라이드입니다.<br>마우스로 움직여보세요.
+<div class="slider-wrap">
+  <div class="slider">
+    <div class="content first-chapter">
+      <div class="diary row">
+        <div class="left cell">
+          <div class="left-img"></div>
+          <div class="right-img"></div>
+        </div>
+        <div class="right cell">
+          <div class="menu">
+            <ul>
+              <li><a href="#">PERSOMAL <br> DATA</a></li>
+              <li><a href="#">OTHER <br> INFORMATION</a></li>
+              <li><a href="#">WEB PROJECT</a></li>
+              <li><a href="#">ART-WORK</a></li>
+              <li><a href="#">ETC</a></li>
+              <li><a href="#">CONTACT</a></li>
+            </ul>
           </div>
         </div>
       </div>
+      <div class="pen pen01"></div>
+      <div class="pen pen02"></div>
+      <div class="pen pen03"></div>
+    </div>
+    <div class="content personal-data">
+      <div class="main-txt">
+        <div class="left">DATA</div>
+        <div class="right">PERSONAL</div>
+      </div>
+      <div class="img-box"></div>
+      <div class="data-box"></div>
+    </div>
+    <div class="content other-data"></div>
+    <div class="content web-project"></div>
+    <div class="content art-work"></div>
+    <div class="content etc"></div>
+    <div class="content contact"></div>
+    <div class="content last-chapter"></div>
+  </div>
+</div>
 </body>
 </html>
