--- a/Portfolio.html
+++ b/Portfolio.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.js" integrity="sha512-HNbo1d4BaJjXh+/e6q4enTyezg5wiXvY3p/9Vzb20NIvkJghZxhzaXeffbdJuuZSxFhJP87ORPadwmU9aN3wSA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.min.js" integrity="sha512-6ORWJX/LrnSjBzwefdNUyLCMTIsGoNP6NftMy2UAm1JBm6PRZCO1d7OHBStWpVFZLO+RerTvqX/Z9mBFfCJZ4A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 
     <link rel="stylesheet" href="./Portfolio.css">
@@ -43,9 +46,96 @@
         <div class="right">PERSONAL</div>
       </div>
       <div class="img-box"></div>
-      <div class="data-box"></div>
+      <div class="data-box">
+        <div class="txt-wrap">
+          <div class="txt-bar row">
+            <P class="cell">NAME</P>
+            <div class="txt cell">이윤정 (LEE Yooun Jung)</div>
+          </div>
+        </div>
+        <div class="txt-wrap">
+          <div class="txt-bar row">
+            <P class="cell">BIRTHDAY</P>
+            <div class="txt cell">99.00.00</div>
+          </div>
+        </div>
+        <div class="txt-wrap">
+          <div class="txt-bar row">
+            <P class="cell">ADDRESS</P>
+            <div class="txt cell">대전 동구</div>
+          </div>
+        </div>
+        <div class="txt-wrap">
+          <div class="txt-bar row">
+            <P class="cell">MOBILE</P>
+            <div class="txt cell">010-0000-0000</div>
+          </div>
+        </div>
+        <div class="txt-wrap">
+          <div class="txt-bar row">
+            <P class="cell">E - MAIL</P>
+            <div class="txt cell">isj9905@naver.com</div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="content other-data"></div>
+    <div class="content other-data">
+      <div class="main-txt">
+        <div class="left">I N F O R M A T I O N</div>
+        <div class="right">O T H E R</div>
+      </div>
+      <div class="diary-wrap">
+        <div class="paper">
+          <div class="title">자격증</div>
+          <div class="list">
+            <div class="txt-wrap">
+              <div class="txt-bar row">
+                <div class="box cell"></div>
+                <div class="txt cell">컴퓨터 활용능력 2급</div>
+              </div>
+              <div class="txt-bar row">
+                <div class="box cell"></div>
+                <div class="txt cell">운전면허증</div>
+              </div>
+            </div>
+          </div>
+          <div class="page-number">-1-</div>
+        </div>
+        <div class="paper">
+          <div class="title">경력 및 학력</div>
+          <div class="list">
+            <div class="txt-wrap">
+              <div class="txt-bar row">
+                <div class="box cell"></div>
+                <div class="txt cell">학교졸업</div>
+              </div>
+              <div class="txt-bar row">
+                <div class="box cell"></div>
+                <div class="txt cell">경력</div>
+              </div>
+            </div>
+          </div>
+          <div class="page-number">-1-</div>
+        </div>
+        <div class="paper">
+          <div class="title">스킬</div>
+          <div class="list">
+            <div class="txt-wrap">
+              <div class="txt-bar row">
+                <div class="box cell"></div>
+                <div class="txt cell">포토샵</div>
+              </div>
+              <div class="txt-bar row">
+                <div class="box cell"></div>
+                <div class="txt cell">일러스트</div>
+              </div>
+            </div>
+          </div>
+          <div class="page-number">-1-</div>
+        </div>
+        <div class="btn"></div>
+      </div>
+    </div>
     <div class="content web-project"></div>
     <div class="content art-work"></div>
     <div class="content etc"></div>
