--- a/Portfolio.html
+++ b/Portfolio.html
@@ -86,6 +86,7 @@
       </div>
       <div class="diary-wrap">
         <div class="paper">
+          <div class="right-btn"></div>
           <div class="title">자격증</div>
           <div class="list">
             <div class="txt-wrap">
@@ -102,6 +103,10 @@
           <div class="page-number">-1-</div>
         </div>
         <div class="paper">
+          <div class="left-btn"></div>
+          <div class="right-btn"></div>
+          <div class="left-btn"></div>
+          <div class="right-btn"></div>
           <div class="title">경력 및 학력</div>
           <div class="list">
             <div class="txt-wrap">
@@ -115,28 +120,46 @@
               </div>
             </div>
           </div>
-          <div class="page-number">-1-</div>
+          <div class="page-number">-2-</div>
         </div>
         <div class="paper">
+          <div class="left-btn"></div>
           <div class="title">스킬</div>
           <div class="list">
             <div class="txt-wrap">
               <div class="txt-bar row">
-                <div class="box cell"></div>
+                <div class="img-box cell"></div>
+                <div class="txt cell">JS</div>
+              </div>
+              <div class="txt-bar row">
+                <div class="img-box cell"></div>
+                <div class="txt cell">CSS</div>
+              </div>
+              <div class="txt-bar row">
+                <div class="img-box cell"></div>
+                <div class="txt cell">HTML</div>
+              </div>
+              <div class="txt-bar row">
+                <div class="img-box cell"></div>
                 <div class="txt cell">포토샵</div>
               </div>
               <div class="txt-bar row">
-                <div class="box cell"></div>
+                <div class="img-box cell"></div>
                 <div class="txt cell">일러스트</div>
               </div>
             </div>
           </div>
-          <div class="page-number">-1-</div>
+          <div class="page-number">-3-</div>
+          <div class="out"></div>
+          <div class="in"></div>
         </div>
-        <div class="btn"></div>
       </div>
     </div>
-    <div class="content web-project"></div>
+    <div class="content web-project">
+      <div class="main-txt">
+        <div class="left">W E B l P R O J E C T</div>
+      </div>
+    </div>
     <div class="content art-work"></div>
     <div class="content etc"></div>
     <div class="content contact"></div>
