--- a/Portfolio.html
+++ b/Portfolio.html
@@ -42,8 +42,8 @@
     </div>
     <div class="content personal-data">
       <div class="main-txt">
-        <div class="left">DATA</div>
-        <div class="right">PERSONAL</div>
+        <div class="right">DATA</div>
+        <div class="left">PERSONAL</div>
       </div>
       <div class="img-box"></div>
       <div class="data-box">
@@ -81,8 +81,8 @@
     </div>
     <div class="content other-data">
       <div class="main-txt">
-        <div class="left">I N F O R M A T I O N</div>
-        <div class="right">O T H E R</div>
+        <div class="right">I N F O R M A T I O N</div>
+        <div class="left">O T H E R</div>
       </div>
       <div class="diary-wrap">
         <div class="paper">
@@ -157,7 +157,37 @@
     </div>
     <div class="content web-project">
       <div class="main-txt">
-        <div class="left">W E B l P R O J E C T</div>
+        <div class="left">P R O J E C T</div>
+        <div class="right">W E B</div>
+      </div>
+      <div class="diary-wrap">
+        <div class="paper row">
+          <div class="txt-wrap row">
+            <div class="day-box cell">2021.10.18</div>
+            <div class="box cell">~</div>
+            <div class="day-box cell">2021.11.02</div>
+          </div>
+          <div class="information-wrap">
+            <div class="left-wrap cell">
+              <div class="img-box"></div>
+              <div class="move-box">
+                <a href="https://codepen.io/dldbswjdddl/pen/eYEyNao?editors=1000">작업 과정 <br> 보러가기</a>
+              </div>
+              <div class="img-box"></div>
+            </div>
+            <div class="right-wrap cell">
+              <div class="txt-bar"></div>
+              <div class="txt-bar"></div>
+              <div class="txt-bar"></div>
+              <div class="txt-bar"></div>
+              <div class="txt-bar"></div>
+              <div class="txt-bar"></div>
+              <div class="txt-bar"></div>
+              <div class="txt-bar"></div>
+              <div class="txt-bar"></div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="content art-work"></div>
