--- a/Portfolio.html
+++ b/Portfolio.html
@@ -157,8 +157,8 @@
     </div>
     <div class="content web-project">
       <div class="main-txt">
-        <div class="left">P R O J E C T</div>
-        <div class="right">W E B</div>
+        <div class="right">P R O J E C T</div>
+        <div class="left">W E B</div>
       </div>
       <div class="diary-wrap">
         <div class="paper row">
@@ -190,10 +190,171 @@
         </div>
       </div>
     </div>
-    <div class="content art-work"></div>
-    <div class="content etc"></div>
-    <div class="content contact"></div>
-    <div class="content last-chapter"></div>
+    <div class="content art-work">
+      <div class="main-txt">
+        <div class="right">W O R K</div>
+        <div class="left">A R T</div>
+      </div>
+      <div class="diary-wrap">
+        <div class="paper row">
+          <div class="section section01 cell">
+            <div class="img-wrap">
+              <div class="img-box"></div>
+            </div>
+            <div class="txt-wrap">
+              <div class="txt-box row">
+                <div class="wrap">
+                  <div class="box cell"></div>
+                  <div class="txt cell">
+                    <p>목적</p>
+                  </div>
+                </div>
+                <div class="wrap">
+                  <div class="box cell"></div>
+                  <div class="txt cell">
+                    <p>주제</p>
+                  </div>
+                </div>
+                <div class="wrap">
+                  <div class="box cell"></div>
+                  <div class="txt cell">
+                    <p>작업기간</p>
+                  </div>
+                </div>
+                <div class="wrap">
+                  <div class="box cell"></div>
+                  <div class="txt cell">
+                    <p>사용색</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="section section02 cell">
+            <div class="img-wrap">
+              <div class="img-box"></div>
+            </div>
+            <div class="txt-wrap">
+              <div class="txt-box row">
+                <div class="wrap">
+                  <div class="box cell"></div>
+                  <div class="txt cell">
+                    <p>목적</p>
+                  </div>
+                </div>
+                <div class="wrap">
+                  <div class="box cell"></div>
+                  <div class="txt cell">
+                    <p>주제</p>
+                  </div>
+                </div>
+                <div class="wrap">
+                  <div class="box cell"></div>
+                  <div class="txt cell">
+                    <p>작업기간</p>
+                  </div>
+                </div>
+                <div class="wrap">
+                  <div class="box cell"></div>
+                  <div class="txt cell">
+                    <p>사용색</p>
+                  </div>
+                </div>
+              </div>
+            </div></div>
+          <div class="section section03 cell">
+            <div class="img-wrap">
+              <div class="img-box"></div>
+            </div>
+            <div class="txt-wrap">
+              <div class="txt-box row">
+                <div class="wrap">
+                  <div class="box cell"></div>
+                  <div class="txt cell">
+                    <p>목적</p>
+                  </div>
+                </div>
+                <div class="wrap">
+                  <div class="box cell"></div>
+                  <div class="txt cell">
+                    <p>주제</p>
+                  </div>
+                </div>
+                <div class="wrap">
+                  <div class="box cell"></div>
+                  <div class="txt cell">
+                    <p>작업기간</p>
+                  </div>
+                </div>
+                <div class="wrap">
+                  <div class="box cell"></div>
+                  <div class="txt cell">
+                    <p>사용색</p>
+                  </div>
+                </div>
+              </div>
+            </div></div>
+        </div>
+      </div>
+    </div>
+    <div class="content etc">
+      <div class="main-txt">
+        <div class="left">E T C</div>
+      </div>
+      <div class="diary-wrap">
+        <div class="paper">
+          <div class="section section01">
+            <div class="img-box"></div>
+            <div class="txt-box">~작업</div>
+          </div>
+          <div class="section section02">
+            <div class="img-box"></div>
+            <div class="txt-box">~작업</div>
+          </div>
+          <div class="section section03">
+            <div class="img-box"></div>
+            <div class="txt-box">~작업</div></div>
+          <div class="section section04">
+            <div class="img-box"></div>
+            <div class="txt-box">~작업</div></div>
+          <div class="section section05">
+            <div class="img-box"></div>
+            <div class="txt-box">~작업</div></div>
+        </div>
+      </div>
+    </div>
+    <div class="content contact">
+      <div class="diary-wrap">
+        <div class="memo">
+          <ul>
+            <li><a href="#">카카오톡 오픈채팅</a></li>
+            <li><a href="https://github.com/leeyoounjung">깃 허브</a></li>
+            <li><a href="https://to2.kr/dcU">이윤정 위키</a></li>
+            <li><a href="#">포트폴리오 진행 과정</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="content last-chapter">
+      <div class="diary row">
+        <div class="left cell">
+          <div class="left-img"></div>
+          <div class="right-img"></div>
+        </div>
+        <div class="right cell">
+          <div class="menu">
+            <ul>
+              <li><a href="#">PERSOMAL <br> DATA</a></li>
+              <li><a href="#">OTHER <br> INFORMATION</a></li>
+              <li><a href="#">WEB PROJECT</a></li>
+              <li><a href="#">ART-WORK</a></li>
+              <li><a href="#">ETC</a></li>
+              <li><a href="#">CONTACT</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 </body>
