--- a/Portfolio.html
+++ b/Portfolio.html
@@ -21,6 +21,16 @@
 <body>
   <div class="slider-wrap">
     <div class="slider">
+      <div class="move-menu">
+        <ul>
+          <li><a href="#content2">PERSONAL DATA</a></li>
+          <li><a href="#">OTHER INROMATION</a></li>
+          <li><a href="#">WEB PROJECT</a></li>
+          <li><a href="#">ART WORK</a></li>
+          <li><a href="#">ETC</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+      </div>
       <div class="content content1 first-chapter">
         <div class="diary row">
           <div class="left cell">
@@ -28,15 +38,15 @@
             <div class="right-img"></div>
           </div>
           <div class="menu cell">
-              <ul>
-                <li onclick="fnMove('2')"><a href="#">PERSOMAL DATA</a></li>
-                <li onclick="fnMove('3')"><a href="#">OTHER INFORMATION</a></li>
-                <li onclick="fnMove('4')"><a href="#">WEB PROJECT</a></li>
-                <li onclick="fnMove('5')"><a href="#">ART WORK</a></li>
-                <li onclick="fnMove('6')"><a href="#">ETC</a></li>
-                <li onclick="fnMove('7')"><a href="#">CONTACT</a></li>
-              </ul>
-            </div>
+            <ul>
+              <li onclick="fnMove('2')"><a href="#">PERSONAL DATA</a></li>
+              <li onclick="fnMove('3')"><a href="#">OTHER INFORMATION</a></li>
+              <li onclick="fnMove('4')"><a href="#">WEB PROJECT</a></li>
+              <li onclick="fnMove('5')"><a href="#">ART WORK</a></li>
+              <li onclick="fnMove('6')"><a href="#">ETC</a></li>
+              <li onclick="fnMove('7')"><a href="#">CONTACT</a></li>
+            </ul>
+          </div>
         </div>
         <div class="pen pen01"></div>
         <div class="pen pen02"></div>
@@ -262,7 +272,8 @@
                     </div>
                   </div>
                 </div>
-              </div></div>
+              </div>
+            </div>
             <div class="section section03 cell">
               <div class="img-wrap">
                 <div class="img-box"></div>
@@ -294,7 +305,8 @@
                     </div>
                   </div>
                 </div>
-              </div></div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -314,13 +326,16 @@
             </div>
             <div class="section section03">
               <div class="img-box"></div>
-              <div class="txt-box">~작업</div></div>
+              <div class="txt-box">~작업</div>
+            </div>
             <div class="section section04">
               <div class="img-box"></div>
-              <div class="txt-box">~작업</div></div>
+              <div class="txt-box">~작업</div>
+            </div>
             <div class="section section05">
               <div class="img-box"></div>
-              <div class="txt-box">~작업</div></div>
+              <div class="txt-box">~작업</div>
+            </div>
           </div>
         </div>
       </div>
@@ -340,21 +355,21 @@
         <div class="diary row">
           <div class="left cell"></div>
           <div class="menu">
-              <ul>
-                <li><a href="#">PERSOMAL <br> DATA</a></li>
-                <li><a href="#">OTHER <br> INFORMATION</a></li>
-                <li><a href="#">WEB PROJECT</a></li>
-                <li><a href="#">ART-WORK</a></li>
-                <li><a href="#">ETC</a></li>
-                <li><a href="#">CONTACT</a></li>
-              </ul>
-            </div>
+            <ul>
+              <li><a href="#">PERSOMAL <br> DATA</a></li>
+              <li><a href="#">OTHER <br> INFORMATION</a></li>
+              <li><a href="#">WEB PROJECT</a></li>
+              <li><a href="#">ART-WORK</a></li>
+              <li><a href="#">ETC</a></li>
+              <li><a href="#">CONTACT</a></li>
+            </ul>
+          </div>
         </div>
         <div class="pen pen01"></div>
         <div class="pen pen02"></div>
         <div class="pen pen03"></div>
+      </div>
     </div>
-   </div>
   </div>
 </body>
 </html>
