--- a/Portfolio.html
+++ b/Portfolio.html
@@ -23,14 +23,14 @@
     <div class="slider">
       <div class="move-menu">
         <ul>
-          <li><a href="#content2">PERSONAL DATA</a></li>
-          <li><a href="#">OTHER INROMATION</a></li>
-          <li><a href="#">WEB PROJECT</a></li>
-          <li><a href="#">ART WORK</a></li>
-          <li><a href="#">ETC</a></li>
-          <li><a href="#">CONTACT</a></li>
+          <li class="move01"><a href="#">PERSONAL DATA</a></li>
+          <li class="move02"><a href="#">OTHER INROMATION</a></li>
+          <li class="move03"><a href="#">WEB PROJECT</a></li>
+          <li class="move04"><a href="#">ART WORK</a></li>
+          <li class="move05"><a href="#">ETC</a></li>
+          <li class="move06"><a href="#">CONTACT</a></li>
         </ul>
-      </div>
+     </div>
       <div class="content content1 first-chapter">
         <div class="diary row">
           <div class="left cell">
@@ -39,12 +39,12 @@
           </div>
           <div class="menu cell">
             <ul>
-              <li onclick="fnMove('2')"><a href="#">PERSONAL DATA</a></li>
-              <li onclick="fnMove('3')"><a href="#">OTHER INFORMATION</a></li>
-              <li onclick="fnMove('4')"><a href="#">WEB PROJECT</a></li>
-              <li onclick="fnMove('5')"><a href="#">ART WORK</a></li>
-              <li onclick="fnMove('6')"><a href="#">ETC</a></li>
-              <li onclick="fnMove('7')"><a href="#">CONTACT</a></li>
+              <li class="move01"><a href="#">PERSONAL <br> DATA</a></li>
+              <li class="move02"><a href="#">OTHER <br> INFORMATION</a></li>
+              <li class="move03"><a href="#">WEB <br> PROJECT</a></li>
+              <li class="move04"><a href="#">ART <br> WORK</a></li>
+              <li class="move05"><a href="#">ETC</a></li>
+              <li class="move06"><a href="#">CONTACT</a></li>
             </ul>
           </div>
         </div>
@@ -344,8 +344,8 @@
           <div class="memo">
             <ul>
               <li><a href="#">카카오톡 오픈채팅</a></li>
-              <li><a href="https://github.com/leeyoounjung">깃 허브</a></li>
-              <li><a href="https://to2.kr/dcU">이윤정 위키</a></li>
+              <li><a href="https://github.com/leeyoounjung" target="_blank">깃 허브</a></li>
+              <li><a href="https://to2.kr/dcU" target="_blank">이윤정 위키</a></li>
               <li><a href="#">포트폴리오 진행 과정</a></li>
             </ul>
           </div>
@@ -356,12 +356,12 @@
           <div class="left cell"></div>
           <div class="menu">
             <ul>
-              <li><a href="#">PERSOMAL <br> DATA</a></li>
-              <li><a href="#">OTHER <br> INFORMATION</a></li>
-              <li><a href="#">WEB PROJECT</a></li>
-              <li><a href="#">ART-WORK</a></li>
-              <li><a href="#">ETC</a></li>
-              <li><a href="#">CONTACT</a></li>
+              <li class="move01"><a href="#">PERSOMAL <br> DATA</a></li>
+              <li class="move02"><a href="#">OTHER <br> INFORMATION</a></li>
+              <li class="move03"><a href="#">WEB <br> PROJECT</a></li>
+              <li class="move04"><a href="#">ART <br> WORK</a></li>
+              <li class="move05"><a href="#">ETC</a></li>
+              <li class="move06"><a href="#">CONTACT</a></li>
             </ul>
           </div>
         </div>
