--- a/Portfolio.html
+++ b/Portfolio.html
@@ -19,6 +19,15 @@
     <script src="./Portfolio.js"></script>
 </head>
 <body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.js" integrity="sha512-HNbo1d4BaJjXh+/e6q4enTyezg5wiXvY3p/9Vzb20NIvkJghZxhzaXeffbdJuuZSxFhJP87ORPadwmU9aN3wSA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.min.js" integrity="sha512-6ORWJX/LrnSjBzwefdNUyLCMTIsGoNP6NftMy2UAm1JBm6PRZCO1d7OHBStWpVFZLO+RerTvqX/Z9mBFfCJZ4A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+  
   <div class="slider-wrap">
     <div class="slider">
       <div class="move-menu">
@@ -97,11 +106,19 @@
           <div class="left">O T H E R</div>
         </div>
         <div class="diary-wrap">
+          <div class="left-btn"></div>
+          <div class="right-btn"></div>
           <div class="paper paper01">
-            <div class="right-btn"></div>
+            <div class="btn-wrap">
+              <div class="right-btn"></div>
+            </div>
             <div class="title">자격증</div>
             <div class="list">
               <div class="txt-wrap">
+                <div class="txt-bar row">
+                  <div class="box cell"></div>
+                  <div class="txt cell">웹디자인기능사 필기 합격</div>
+                </div>
                 <div class="txt-bar row">
                   <div class="box cell"></div>
                   <div class="txt cell">컴퓨터 활용능력 2급</div>
@@ -110,30 +127,46 @@
                   <div class="box cell"></div>
                   <div class="txt cell">운전면허증</div>
                 </div>
+                <div class="txt-bar row">
+                  <div class="box cell"></div>
+                  <div class="txt cell">ITQ 한글, 파워포인트, 엑셀</div>
+                </div>
+                <div class="txt-bar row">
+                  <div class="box cell"></div>
+                  <div class="txt cell">SMAT</div>
+                </div>
               </div>
             </div>
             <div class="page-number">-1-</div>
           </div>
           <div class="paper paper02">
-            <div class="left-btn"></div>
-            <div class="right-btn"></div>
+            <div class="btn-wrap">
+              <div class="left-btn"></div>
+              <div class="right-btn"></div>
+            </div>       
             <div class="title">경력 및 학력</div>
             <div class="list">
               <div class="txt-wrap">
                 <div class="txt-bar row">
                   <div class="box cell"></div>
-                  <div class="txt cell">학교졸업</div>
+                  <div class="txt cell">2021.05 ~ 2021.12 <br> SBS아카데미 컴퓨터학원 <br> 웹 디자이너 과정 수료</div>
                 </div>
                 <div class="txt-bar row">
                   <div class="box cell"></div>
-                  <div class="txt cell">경력</div>
+                  <div class="txt cell">2018.03. ~ 2021.04. <br> 한강라이프 경영지원실 주임 </div>
+                </div>
+                <div class="txt-bar row">
+                  <div class="box cell"></div>
+                  <div class="txt cell">2018.02 <br> 대전대성여자고등학교 졸업 </div>
                 </div>
               </div>
             </div>
             <div class="page-number">-2-</div>
           </div>
           <div class="paper paper03">
-            <div class="left-btn"></div>
+            <div class="btn-wrap">
+              <div class="left-btn"></div>
+            </div>
             <div class="title">스킬</div>
             <div class="list">
               <div class="txt-wrap">
@@ -160,8 +193,6 @@
               </div>
             </div>
             <div class="page-number">-3-</div>
-            <div class="out"></div>
-            <div class="in"></div>
           </div>
         </div>
       </div>
@@ -181,7 +212,7 @@
               <div class="left-wrap cell">
                 <div class="img-box"></div>
                 <div class="move-box">
-                  <a href="https://codepen.io/dldbswjdddl/pen/eYEyNao?editors=1000">작업 과정 <br> 보러가기</a>
+                  <a href="https://codepen.io/dldbswjdddl/pen/eYEyNao?editors=1000" target="_blank">작업 과정 <br> 보러가기</a>
                 </div>
                 <div class="img-box"></div>
               </div>
@@ -217,13 +248,13 @@
                   <div class="wrap">
                     <div class="box cell"></div>
                     <div class="txt cell">
-                      <p>목적</p>
+                      <p>인포그래픽 리디자인</p>
                     </div>
                   </div>
                   <div class="wrap">
                     <div class="box cell"></div>
                     <div class="txt cell">
-                      <p>주제</p>
+                      <p>광역알뜰카드</p>
                     </div>
                   </div>
                   <div class="wrap">
@@ -250,19 +281,19 @@
                   <div class="wrap">
                     <div class="box cell"></div>
                     <div class="txt cell">
-                      <p>목적</p>
+                      <p>미용제품 포스터 제작</p>
                     </div>
                   </div>
                   <div class="wrap">
                     <div class="box cell"></div>
                     <div class="txt cell">
-                      <p>주제</p>
+                      <p>바디샵</p>
                     </div>
                   </div>
                   <div class="wrap">
                     <div class="box cell"></div>
                     <div class="txt cell">
-                      <p>작업기간</p>
+                      <p>21.06.07 ~ 21.06.14.</p>
                     </div>
                   </div>
                   <div class="wrap">
@@ -283,19 +314,19 @@
                   <div class="wrap">
                     <div class="box cell"></div>
                     <div class="txt cell">
-                      <p>목적</p>
+                      <p>영화 포스터 제작</p>
                     </div>
                   </div>
                   <div class="wrap">
                     <div class="box cell"></div>
                     <div class="txt cell">
-                      <p>주제</p>
+                      <p>마녀배달부 키키</p>
                     </div>
                   </div>
                   <div class="wrap">
                     <div class="box cell"></div>
                     <div class="txt cell">
-                      <p>작업기간</p>
+                      <p>21.06.16. ~ 21.06.23.</p>
                     </div>
                   </div>
                   <div class="wrap">
@@ -346,7 +377,7 @@
               <li><a href="#">카카오톡 오픈채팅</a></li>
               <li><a href="https://github.com/leeyoounjung" target="_blank">깃 허브</a></li>
               <li><a href="https://to2.kr/dcU" target="_blank">이윤정 위키</a></li>
-              <li><a href="#">포트폴리오 진행 과정</a></li>
+              <li><a href="https://codepen.io/dldbswjdddl/pen/wvqpWZO?editors=1000" target="_blank">포트폴리오 진행 과정</a></li>
             </ul>
           </div>
         </div>
