--- a/Portfolio.html
+++ b/Portfolio.html
@@ -19,15 +19,6 @@
     <script src="./Portfolio.js"></script>
 </head>
 <body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.js" integrity="sha512-HNbo1d4BaJjXh+/e6q4enTyezg5wiXvY3p/9Vzb20NIvkJghZxhzaXeffbdJuuZSxFhJP87ORPadwmU9aN3wSA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.min.js" integrity="sha512-6ORWJX/LrnSjBzwefdNUyLCMTIsGoNP6NftMy2UAm1JBm6PRZCO1d7OHBStWpVFZLO+RerTvqX/Z9mBFfCJZ4A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
-  
   <div class="slider-wrap">
     <div class="slider">
       <div class="move-menu">
@@ -260,7 +251,7 @@
                   <div class="wrap">
                     <div class="box cell"></div>
                     <div class="txt cell">
-                      <p>작업기간</p>
+                      <p>21.08.14 ~ 08.28.</p>
                     </div>
                   </div>
                   <div class="wrap">
@@ -293,7 +284,7 @@
                   <div class="wrap">
                     <div class="box cell"></div>
                     <div class="txt cell">
-                      <p>21.06.07 ~ 21.06.14.</p>
+                      <p>21.06.07 ~ .06.14.</p>
                     </div>
                   </div>
                   <div class="wrap">
@@ -326,7 +317,7 @@
                   <div class="wrap">
                     <div class="box cell"></div>
                     <div class="txt cell">
-                      <p>21.06.16. ~ 21.06.23.</p>
+                      <p>21.06.16. ~ 06.23.</p>
                     </div>
                   </div>
                   <div class="wrap">
@@ -349,24 +340,29 @@
           <div class="paper">
             <div class="section section01">
               <div class="img-box"></div>
-              <div class="txt-box">~작업</div>
+              <div class="txt-box">켄타우로스</div>
             </div>
+            <div class="arrow arrow01"></div>
             <div class="section section02">
               <div class="img-box"></div>
-              <div class="txt-box">~작업</div>
+              <div class="txt-box">신의 분노</div>
             </div>
+            <div class="arrow arrow02"></div>
             <div class="section section03">
               <div class="img-box"></div>
-              <div class="txt-box">~작업</div>
+              <div class="txt-box">네온효과 만들기</div>
             </div>
+            <div class="arrow arrow03"></div>
             <div class="section section04">
               <div class="img-box"></div>
-              <div class="txt-box">~작업</div>
+              <div class="txt-box">휴가중인 다람쥐</div>
             </div>
+            <div class="arrow arrow04"></div>
             <div class="section section05">
               <div class="img-box"></div>
-              <div class="txt-box">~작업</div>
+              <div class="txt-box">커튼여는 여자</div>
             </div>
+            <div class="arrow arrow05"></div>
           </div>
         </div>
       </div>
