--- a/Portfolio.html
+++ b/Portfolio.html
@@ -13,6 +13,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-rwdImageMaps/1.6/jquery.rwdImageMaps.min.js"></script>
+    <map id="imgmap202112214216" name="imgmap202112214216"><area shape="rect" alt="" title="" coords="2,2,329,237" href="https://raw.githubusercontent.com/leeyoounjung/Portfolio/3c361dbce1587a2ab20089c2b8c3ef68bf58ed2f/%EC%BC%84%ED%83%80%EC%9A%B0%EB%A1%9C%EC%8A%A4.jpg" target="_blank" ></map>
+    <map id="imgmap2021122141514" name="imgmap2021122141514"><area shape="rect" alt="" title="" coords="1,2,329,238" href="https://raw.githubusercontent.com/leeyoounjung/Portfolio/2325f0d852750a7394ab9c1b0e8e3e9d972e0342/%EC%8B%A0%EC%9D%98%EB%B6%84%EB%85%B8.jpg" target="_blank"></map>
+    <map id="imgmap2021122141739" name="imgmap2021122141739"><area shape="rect" alt="" title="" coords="3,1,326,239" href="https://raw.githubusercontent.com/leeyoounjung/Portfolio/ffdf25a52d77ab77df497baa5e2b37e7cbd8fddb/%EB%84%A4%EC%98%A8%ED%9A%A8%EA%B3%BC.jpg" target="_blank"></map>
+    <map id="imgmap2021122141949" name="imgmap2021122141949"><area shape="rect" alt="" title="" coords="1,1,329,238" href="https://raw.githubusercontent.com/leeyoounjung/Portfolio/d1fd975edca85189acc32e211319b1af5b492495/%ED%9C%B4%EA%B0%80%EC%A4%91%EC%9D%B8%20%EB%8B%A4%EB%9E%8C%EC%A5%90.jpg" target="_blank"></map>
+    <map id="imgmap202112214210" name="imgmap202112214210"><area shape="rect" alt="" title="" coords="1,1,330,238" href="https://raw.githubusercontent.com/leeyoounjung/Portfolio/586c9cac63d1b4d5715b39c952712373abd12116/%EC%BB%A4%ED%8A%BC%EC%97%AC%EB%8A%94%20%EC%97%AC%EC%9E%90.jpg" target="_blank"></map>
+    <map id="imgmap2021122144016" name="imgmap2021122144016"><area shape="rect" alt="" title="" coords="2,1,350,169" href="https://raw.githubusercontent.com/leeyoounjung/Portfolio/e0fa8aa32439712bf7693548c03266bc8c56cd2b/%EC%9D%B8%ED%8F%AC%EA%B7%B8%EB%9E%98%ED%94%BD%20%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8.png" target="_blank"></map>
+    <map id="imgmap202112214427" name="imgmap202112214427"><area shape="rect" alt="" title="" coords="6,4,424,252" href="https://raw.githubusercontent.com/leeyoounjung/Portfolio/b412de8d9330eaf73ff006c6be0029efd8f16cc1/%EB%AF%B8%EC%9A%A9%EC%A0%9C%ED%92%88%20%ED%8F%AC%EC%8A%A4%ED%84%B0%EC%A0%9C%EC%9E%91.jpg" target="_blank"></map>
+    <map id="imgmap2021122144350" name="imgmap2021122144350"><area shape="rect" alt="" title="" coords="3,1,411,234" href="https://raw.githubusercontent.com/leeyoounjung/Portfolio/0b92cb11b8eb8588a3917c9d1e1af73b11239157/%EC%98%81%ED%99%94%20%ED%8F%AC%EC%8A%A4%ED%84%B0%20%EC%A0%9C%EC%9E%91.jpg" target="_blank"></map>
+    <map id="imgmap202112215031" name="imgmap202112215031"><area shape="rect" alt="" title="" coords="1,2,208,160" href="https://raw.githubusercontent.com/leeyoounjung/Portfolio/bc6c959842589c928ed1d5e54dbad249e29bde64/%EC%9B%B9%20%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8.jpg" target="_blank"></map>
+
     
 
     <link rel="stylesheet" href="./Portfolio.css">
@@ -201,11 +217,15 @@
             </div>
             <div class="information-wrap">
               <div class="left-wrap cell">
-                <div class="img-box"></div>
+                <div class="img-box">
+                  <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/aae72671b1b7384951b40bee7eeb1d4598f0d951/%EC%9B%B9%20%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8%20%EC%8D%B8%EB%84%A4%EC%9D%BC1.jpg" alt="" usemap="#imgmap202112215031">
+                </div>
                 <div class="move-box">
                   <a href="https://codepen.io/dldbswjdddl/pen/eYEyNao?editors=1000" target="_blank">작업 과정 <br> 보러가기</a>
                 </div>
-                <div class="img-box"></div>
+                <div class="img-box">
+                  <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/aae72671b1b7384951b40bee7eeb1d4598f0d951/%EC%9B%B9%20%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8%20%EC%8D%B8%EB%84%A4%EC%9D%BC2.jpg" alt="">
+                </div>
               </div>
               <div class="right-wrap cell">
                 <div class="txt-bar"></div>
@@ -232,7 +252,9 @@
           <div class="paper row">
             <div class="section section01 cell">
               <div class="img-wrap">
-                <div class="img-box"></div>
+                <div class="img-box">
+                  <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/85588ece3dac8ba17b8d6aec09765f1012da271d/%EC%9D%B8%ED%8F%AC%EA%B7%B8%EB%9E%98%ED%94%BD%20%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8_%EC%8D%B8%EB%84%A4%EC%9D%BC.jpg" alt="" usemap="#imgmap2021122144016">
+                </div>
               </div>
               <div class="txt-wrap">
                 <div class="txt-box row">
@@ -256,8 +278,11 @@
                   </div>
                   <div class="wrap">
                     <div class="box cell"></div>
-                    <div class="txt cell">
-                      <p>사용색</p>
+                    <div class="color cell row">
+                      <div class="color-box cell"></div>
+                      <div class="color-box cell"></div>
+                      <div class="color-box cell"></div>
+                      <div class="color-box cell"></div>
                     </div>
                   </div>
                 </div>
@@ -265,7 +290,9 @@
             </div>
             <div class="section section02 cell">
               <div class="img-wrap">
-                <div class="img-box"></div>
+                <div class="img-box">
+                  <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/25ba9025468f9f481e19cd778ac99046959ff6e5/%EB%AF%B8%EC%9A%A9%EC%A0%9C%ED%92%88%20%ED%8F%AC%EC%8A%A4%ED%84%B0_%EC%8D%B8%EB%84%A4%EC%9D%BC.jpg" alt="" usemap="#imgmap202112214427">
+                </div>
               </div>
               <div class="txt-wrap">
                 <div class="txt-box row">
@@ -289,8 +316,9 @@
                   </div>
                   <div class="wrap">
                     <div class="box cell"></div>
-                    <div class="txt cell">
-                      <p>사용색</p>
+                    <div class="color cell row">
+                      <div class="color-box cell"></div>
+                      <div class="color-box cell"></div>
                     </div>
                   </div>
                 </div>
@@ -298,7 +326,9 @@
             </div>
             <div class="section section03 cell">
               <div class="img-wrap">
-                <div class="img-box"></div>
+                <div class="img-box">
+                  <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/25ba9025468f9f481e19cd778ac99046959ff6e5/%EC%98%81%ED%99%94%20%ED%8F%AC%EC%8A%A4%ED%84%B0_%EC%8D%B8%EB%84%A4%EC%9D%BC.jpg" alt="" usemap="#imgmap2021122144350">
+                </div>
               </div>
               <div class="txt-wrap">
                 <div class="txt-box row">
@@ -322,8 +352,9 @@
                   </div>
                   <div class="wrap">
                     <div class="box cell"></div>
-                    <div class="txt cell">
-                      <p>사용색</p>
+                    <div class="color cell row">
+                      <div class="color-box cell"></div>
+                      <div class="color-box cell"></div>
                     </div>
                   </div>
                 </div>
@@ -339,27 +370,37 @@
         <div class="diary-wrap">
           <div class="paper">
             <div class="section section01">
-              <div class="img-box"></div>
+              <div class="img-box">
+                <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/6dd7ae50d0e9ef3acb262608f175270cf523744a/%EC%BC%84%ED%83%80%EC%9A%B0%EB%A1%9C%EC%8A%A4_%EC%8D%B8%EB%84%A4%EC%9D%BC.jpg" alt="" usemap="#imgmap202112214216">
+              </div>
               <div class="txt-box">켄타우로스</div>
             </div>
             <div class="arrow arrow01"></div>
             <div class="section section02">
-              <div class="img-box"></div>
+              <div class="img-box">
+                <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/6dd7ae50d0e9ef3acb262608f175270cf523744a/%EC%8B%A0%EC%9D%98%EB%B6%84%EB%85%B8_%EC%8D%B8%EB%84%A4%EC%9D%BC.jpg" alt="" usemap="#imgmap2021122141514">
+              </div>
               <div class="txt-box">신의 분노</div>
             </div>
             <div class="arrow arrow02"></div>
             <div class="section section03">
-              <div class="img-box"></div>
+              <div class="img-box">
+                <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/6dd7ae50d0e9ef3acb262608f175270cf523744a/%EB%84%A4%EC%98%A8%EC%82%AC%EC%9D%B8_%EC%8D%B8%EB%84%A4%EC%9D%BC.jpg" alt="" usemap="#imgmap2021122141739">
+              </div>
               <div class="txt-box">네온효과 만들기</div>
             </div>
             <div class="arrow arrow03"></div>
             <div class="section section04">
-              <div class="img-box"></div>
+              <div class="img-box">
+                <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/6dd7ae50d0e9ef3acb262608f175270cf523744a/%ED%9C%B4%EA%B0%80%EC%A4%91%EC%9D%B8%20%EB%9E%8C%EC%A5%90_%EC%8D%B8%EB%84%A4%EC%9D%BC.jpg" alt="" usemap="#imgmap2021122141949">
+              </div>
               <div class="txt-box">휴가중인 다람쥐</div>
             </div>
             <div class="arrow arrow04"></div>
             <div class="section section05">
-              <div class="img-box"></div>
+              <div class="img-box">
+                <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/6dd7ae50d0e9ef3acb262608f175270cf523744a/%EC%BB%A4%ED%8A%BC%EC%97%AC%EB%8A%94%20%EC%97%AC%EC%9E%90_%EC%8D%B8%EB%84%A4%EC%9D%BC.jpg" alt="" usemap="#imgmap202112214210">
+              </div>
               <div class="txt-box">커튼여는 여자</div>
             </div>
             <div class="arrow arrow05"></div>
