--- a/Portfolio.html
+++ b/Portfolio.html
@@ -28,7 +28,12 @@
     <map id="imgmap202112214427" name="imgmap202112214427"><area shape="rect" alt="" title="" coords="6,4,424,252" href="https://raw.githubusercontent.com/leeyoounjung/Portfolio/b412de8d9330eaf73ff006c6be0029efd8f16cc1/%EB%AF%B8%EC%9A%A9%EC%A0%9C%ED%92%88%20%ED%8F%AC%EC%8A%A4%ED%84%B0%EC%A0%9C%EC%9E%91.jpg" target="_blank"></map>
     <map id="imgmap2021122144350" name="imgmap2021122144350"><area shape="rect" alt="" title="" coords="3,1,411,234" href="https://raw.githubusercontent.com/leeyoounjung/Portfolio/0b92cb11b8eb8588a3917c9d1e1af73b11239157/%EC%98%81%ED%99%94%20%ED%8F%AC%EC%8A%A4%ED%84%B0%20%EC%A0%9C%EC%9E%91.jpg" target="_blank"></map>
     <map id="imgmap202112215031" name="imgmap202112215031"><area shape="rect" alt="" title="" coords="1,2,208,160" href="https://raw.githubusercontent.com/leeyoounjung/Portfolio/bc6c959842589c928ed1d5e54dbad249e29bde64/%EC%9B%B9%20%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8.jpg" target="_blank"></map>
+    <script src='../static/js/jquery-3.5.1.min.js'></script>
 
+    <link href="/SRC2/barchart/build/css/style.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="/SRC2/barchart/build/css/horizBarChart.css" media="all" rel="stylesheet" type="text/css" />
+    <script src="/SRC2/barchart/build/js/jquery.min.js"></script>
+    <script src="/SRC2/barchart/build/js/jquery.horizBarChart.min.js"></script>
     
 
     <link rel="stylesheet" href="./Portfolio.css">
@@ -175,29 +180,20 @@
               <div class="left-btn"></div>
             </div>
             <div class="title">스킬</div>
-            <div class="list">
-              <div class="txt-wrap">
-                <div class="txt-bar row">
-                  <div class="img-box cell"></div>
-                  <div class="txt cell">JS</div>
-                </div>
-                <div class="txt-bar row">
-                  <div class="img-box cell"></div>
-                  <div class="txt cell">CSS</div>
-                </div>
-                <div class="txt-bar row">
-                  <div class="img-box cell"></div>
-                  <div class="txt cell">HTML</div>
-                </div>
-                <div class="txt-bar row">
-                  <div class="img-box cell"></div>
-                  <div class="txt cell">포토샵</div>
-                </div>
-                <div class="txt-bar row">
-                  <div class="img-box cell"></div>
-                  <div class="txt cell">일러스트</div>
-                </div>
-              </div>
+            <div class="skill-bar">
+              <div class="progressbar photoshop" per="60%">포토샵</div>
+            </div>
+            <div class="skill-bar">
+              <div class="progressbar illustrator" per="70%">일러스트</div>
+            </div>
+            <div class="skill-bar">
+              <div class="progressbar html" per="80%">HTML</div>
+            </div>
+            <div class="skill-bar">
+              <div class="progressbar css" per="90%">CSS</div>
+            </div>
+            <div class="skill-bar">
+              <div class="progressbar js" per="50%">JS</div>
             </div>
             <div class="page-number">-3-</div>
           </div>
