--- a/Portfolio.html
+++ b/Portfolio.html
@@ -180,20 +180,25 @@
               <div class="left-btn"></div>
             </div>
             <div class="title">스킬</div>
+            <p>Photoshop</p>
             <div class="skill-bar">
-              <div class="progressbar photoshop" per="60%">포토샵</div>
+              <div class="skill photoshop">60%</div>
             </div>
+            <p>Illustrator</p>
             <div class="skill-bar">
-              <div class="progressbar illustrator" per="70%">일러스트</div>
+              <div class="skill illustration">60%</div>
             </div>
+            <p>HTML</p>
             <div class="skill-bar">
-              <div class="progressbar html" per="80%">HTML</div>
+              <div class="skill html">70%</div>
             </div>
+            <p>CSS</p>
             <div class="skill-bar">
-              <div class="progressbar css" per="90%">CSS</div>
+              <div class="skill css">75%</div>
             </div>
+            <p>JS</p>
             <div class="skill-bar">
-              <div class="progressbar js" per="50%">JS</div>
+              <div class="skill js">40%</div>
             </div>
             <div class="page-number">-3-</div>
           </div>
