--- a/Portfolio.html
+++ b/Portfolio.html
@@ -227,18 +227,18 @@
                 <div class="img-box">
                   <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/aae72671b1b7384951b40bee7eeb1d4598f0d951/%EC%9B%B9%20%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8%20%EC%8D%B8%EB%84%A4%EC%9D%BC2.jpg" alt="">
                 </div>
-              </div>
+              </div>             
               <div class="right-wrap cell">
-                <div class="txt-bar"></div>
-                <div class="txt-bar"></div>
-                <div class="txt-bar"></div>
-                <div class="txt-bar"></div>
-                <div class="txt-bar"></div>
-                <div class="txt-bar"></div>
-                <div class="txt-bar"></div>
-                <div class="txt-bar"></div>
-                <div class="txt-bar"></div>
-              </div>
+                  <div class="txt-bar">코딩을 배운 후 처음 으로 하는 웹</div>
+                  <div class="txt-bar">리디자인이다! 리디자인 계획을 세우고 </div>
+                  <div class="txt-bar">몇번의 수정 끝에 최종 시안을 완성했다</div>
+                  <div class="txt-bar">그 후에 바로 코딩에 들어갔는데</div>
+                  <div class="txt-bar">하는도중 여기저기에서 문제가 튀어</div>
+                  <div class="txt-bar">나왔다 😥 인터넷 검색을 통해 문제점을</div>
+                  <div class="txt-bar">찾고 해결하면서 리디자인을 마쳤다</div>
+                  <div class="txt-bar">처음 하는 리디자인이라 어색한 부분이</div>
+                  <div class="txt-bar">많았지만, 다음번에는 더 잘 해야지!!</div>
+                </div>
             </div>
           </div>
         </div>
