--- a/Portfolio.html
+++ b/Portfolio.html
@@ -119,11 +119,11 @@
           <div class="left">O T H E R</div>
         </div>
         <div class="diary-wrap">
-          <div class="left-btn"></div>
-          <div class="right-btn"></div>
           <div class="paper paper01">
             <div class="btn-wrap">
-              <div class="right-btn"></div>
+              <div class="right-btn">
+                <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/349853f7443dbeca4cb1ab1fee42b7e98d9fc841/%EC%A0%91%ED%9E%8C%ED%8E%98%EC%9D%B4%EC%A7%809.png" alt="">
+              </div>
             </div>
             <div class="title">자격증</div>
             <div class="list">
@@ -154,8 +154,10 @@
           </div>
           <div class="paper paper02">
             <div class="btn-wrap">
-              <div class="left-btn"></div>
-              <div class="right-btn"></div>
+              <div class="left-btn">
+                <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/349853f7443dbeca4cb1ab1fee42b7e98d9fc841/%EC%A0%91%ED%9E%8C%ED%8E%98%EC%9D%B4%EC%A7%809.png" alt=""></div>
+              <div class="right-btn">
+                <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/349853f7443dbeca4cb1ab1fee42b7e98d9fc841/%EC%A0%91%ED%9E%8C%ED%8E%98%EC%9D%B4%EC%A7%809.png" alt=""></div>
             </div>       
             <div class="title">경력 및 학력</div>
             <div class="list">
@@ -178,7 +180,8 @@
           </div>
           <div class="paper paper03">
             <div class="btn-wrap">
-              <div class="left-btn"></div>
+              <div class="left-btn">
+                <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/349853f7443dbeca4cb1ab1fee42b7e98d9fc841/%EC%A0%91%ED%9E%8C%ED%8E%98%EC%9D%B4%EC%A7%809.png" alt=""></div>
             </div>
             <div class="title">스킬</div>
             <p>Photoshop</p>
